# agente

./: .env  .env.example  .gitignore  README.md  pyproject.toml  setup_and_start.bat  start_automat.bat  start_gui.bat
src/: Nuevo Archivo WinRAR.rar
