[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "automat"
version = "0.1.0"
description = "Telegram bot + desktop daemon for expenses, bus tracking, file organization, cleanup reports and process supervision."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "python-telegram-bot>=21.0",
  "watchdog>=4.0",
  "psutil>=5.9",
  "openpyxl>=3.1",
  "requests>=2.31",
  "PySide6>=6.7",
]

[project.scripts]
automat = "automat.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
